--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<!doctype html> <html lang=pt> <head> <meta charset=utf-8 /> <link rel=icon href=favicon.ico /> <meta name=viewport content="width=device-width,initial-scale=1"/> <meta name=theme-color content=#000000 /> <meta name=description content="Web site created using create-react-app"/> <link rel=apple-touch-icon href=logo192.png /> <link rel=manifest href=manifest.json /> <title>Pacman COVID-19 - Pac Coronavirus</title> </head> <body> <noscript>You need to enable JavaScript to run this app.</noscript> <div id=root></div> <script type="text/javascript" src="static/js/bundle.js"></script></body> </html> 
+<!doctype html> <html lang=pt> <head> <meta charset=utf-8 /> <link rel=icon href=favicon.ico /> <meta name=viewport content="width=device-width,initial-scale=1"/> <meta name=theme-color content=#000000 /> <meta name=description content="Web site created using create-react-app"/> <link rel=apple-touch-icon href=logo192.png /> <link rel=manifest href=manifest.json /> <title>Pacman COVID-19 - Pac Coronavirus</title>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BCVD4H2PZN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BCVD4H2PZN');
+</script></head> <body> <noscript>You need to enable JavaScript to run this app.</noscript> <div id=root></div> <script type="text/javascript" src="static/js/bundle.js"></script></body> </html> 
